[gd_scene load_steps=4 format=3 uid="uid://bf12spt82hwvx"]

[ext_resource type="Script" path="res://scripts/fruit.gd" id="1_g66hq"]
[ext_resource type="Texture2D" uid="uid://c7213tp8wij48" path="res://assets/items/fruit n seeds.png" id="2_a4xlj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_48u85"]
size = Vector2(16, 16)

[node name="Apple" type="Area2D"]
collision_mask = 2
script = ExtResource("1_g66hq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 3
visibility_layer = 3
shape = SubResource("RectangleShape2D_48u85")

[node name="apple_seed" type="Sprite2D" parent="."]
texture = ExtResource("2_a4xlj")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="apple_sapling" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a4xlj")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="apple_almost" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a4xlj")
region_enabled = true
region_rect = Rect2(0, 32, 16, 16)

[node name="apple_mature" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_a4xlj")
region_enabled = true
region_rect = Rect2(0, 48, 16, 16)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
